@@ -1,3 +1,11 @@
+2002-11-28  Ulrich Drepper  <drepper@redhat.com>
+
+	* sysdeps/unix/sysv/linux/x86_64/pthread_once.S: New file.
+
+	* sysdeps/unix/sysv/linux/x86_64/bits/pthreadtypes.h: New file.
+
+	* sysdeps/unix/sysv/linux/x86_64/pt-vfork.S: New file.
+
 2002-11-27  Ulrich Drepper  <drepper@redhat.com>
 
 	* sysdeps/x86_64/bits/atomic.h: New file.
